Updated number of rooms from 10 to 50

--- a/demo/style.css
+++ b/demo/style.css
@@ -99,34 +99,154 @@ pre {
 
 /* Rooms */
 .map-room-0 {
-  background-color: #89d2a5; }
+  background-color: #e986b8; }
 
 .map-room-1 {
-  background-color: #c5c39a; }
+  background-color: #c973b8; }
 
 .map-room-2 {
-  background-color: #dbedf7; }
+  background-color: #b897a1; }
 
 .map-room-3 {
-  background-color: #c9f6d2; }
+  background-color: #e2f7df; }
 
 .map-room-4 {
-  background-color: #73a66c; }
+  background-color: #f7dcf2; }
 
 .map-room-5 {
-  background-color: #aaaacf; }
+  background-color: #b466e5; }
 
 .map-room-6 {
-  background-color: #b7f286; }
+  background-color: #6ae681; }
 
 .map-room-7 {
-  background-color: #f39ed9; }
+  background-color: #f0abae; }
 
 .map-room-8 {
-  background-color: #edaada; }
+  background-color: #f2e3c7; }
 
 .map-room-9 {
-  background-color: #7670f0; }
+  background-color: #877d9a; }
 
 .map-room-10 {
-  background-color: #a2b0d3; }
+  background-color: #a8b8a7; }
+
+.map-room-11 {
+  background-color: #cd87e5; }
+
+.map-room-12 {
+  background-color: #fb6bd5; }
+
+.map-room-13 {
+  background-color: #a3bfe8; }
+
+.map-room-14 {
+  background-color: #dccd82; }
+
+.map-room-15 {
+  background-color: #7e9a91; }
+
+.map-room-16 {
+  background-color: #9cd7b3; }
+
+.map-room-17 {
+  background-color: #fbac8e; }
+
+.map-room-18 {
+  background-color: #6daad4; }
+
+.map-room-19 {
+  background-color: #badbcd; }
+
+.map-room-20 {
+  background-color: #7deb67; }
+
+.map-room-21 {
+  background-color: #eec869; }
+
+.map-room-22 {
+  background-color: #96e98a; }
+
+.map-room-23 {
+  background-color: #f88ea5; }
+
+.map-room-24 {
+  background-color: #c5d775; }
+
+.map-room-25 {
+  background-color: #f37faf; }
+
+.map-room-26 {
+  background-color: #74c9cc; }
+
+.map-room-27 {
+  background-color: #67c39d; }
+
+.map-room-28 {
+  background-color: #6db5ef; }
+
+.map-room-29 {
+  background-color: #afc77a; }
+
+.map-room-30 {
+  background-color: #c88ea5; }
+
+.map-room-31 {
+  background-color: #ffd9b7; }
+
+.map-room-32 {
+  background-color: #949586; }
+
+.map-room-33 {
+  background-color: #b6977a; }
+
+.map-room-34 {
+  background-color: #dbff7c; }
+
+.map-room-35 {
+  background-color: #cfac66; }
+
+.map-room-36 {
+  background-color: #79a7f1; }
+
+.map-room-37 {
+  background-color: #6a92dc; }
+
+.map-room-38 {
+  background-color: #70a078; }
+
+.map-room-39 {
+  background-color: #a9b27a; }
+
+.map-room-40 {
+  background-color: #6883da; }
+
+.map-room-41 {
+  background-color: #cef88c; }
+
+.map-room-42 {
+  background-color: #ebc5be; }
+
+.map-room-43 {
+  background-color: #a0a7ae; }
+
+.map-room-44 {
+  background-color: #ed7fa6; }
+
+.map-room-45 {
+  background-color: #70cbaf; }
+
+.map-room-46 {
+  background-color: #e4bdda; }
+
+.map-room-47 {
+  background-color: #ad82e1; }
+
+.map-room-48 {
+  background-color: #9b92f5; }
+
+.map-room-49 {
+  background-color: #a2d7d6; }
+
+.map-room-50 {
+  background-color: #8f92e0; }
