--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,9 +14,9 @@
 /*
   VARIABLES
 */
-/// Number of rooms to be generated. 10 is enough...
+/// Number of rooms to be generated. 50 is great...
 /// @type Integer
-$nb-rooms:10;
+$nb-rooms:50;
 
 /// Prefix for classes
 /// @type string
