--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -58,3 +58,7 @@ pre{
   border: 1px solid $border-color;
   background-color: $pane-bg-color;
 }
+#position{
+  padding:$padding-lg;
+  font-size:1.5em;
+}
