--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -62,3 +62,10 @@ pre{
   padding:$padding-lg;
   font-size:1.5em;
 }
+// Room overlay
+#rooms{
+  position:relative;
+  top:0;
+  left:0;
+  float:left;
+}
